# gazebo_ros2_computer_vision

./: .gitignore  README.md  bridge_ros_gazebo.bash  image_view.rviz  ros_gazebo_bridge.yaml
src/follow_line/: CMakeLists.txt  package.xml
src/follow_line/launch/: create_circle.launch.py
src/follow_line/src/: follow_line.cpp
